[macOS] The .dmg prompt asking the user to install or to not install Firefox is not detected by Voiceover
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
People
(Reporter: csasca, Assigned: eeejay)
References
(Blocks 2 open bugs)
Details
(Keywords: access)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Affected versions
- 93.0b2
- 94.0a1
Affected platforms
- macOS 11.5
Preconditions
- Have Voiceover active
Steps to reproduce
- Open the .dmg.
- Drag and click on the Firefox icon from the dock or launch it from the disk image
Expected result
- The prompt to install or to not install Firefox is read by Voiceover
Actual result
- The prompt is not detected by Voiceover
Regression range
- Not a regression, this was added by bug 516362.
Additional notes
- The issue can be seen in the following attachment
| Reporter | ||
Updated•4 years ago
|
Comment 1•4 years ago
|
||
ni'ing me so I remember to have a look at this tomorrow :)
| Assignee | ||
Comment 2•4 years ago
|
||
Looks like it is possible to call NSAlert's runModal without an event loop. This prevents accessibility APIs from querying the UI. I'll try to come up with something.
| Assignee | ||
Comment 3•4 years ago
|
||
This is needed for platform accessibility support.
| Assignee | ||
Comment 4•4 years ago
|
||
Correction: there is an event loop, or an embedded one if NSAlert is called when one is already running. I think the issue has to do with some other magic that happens when an NSApplication is started.
Comment 6•4 years ago
|
||
| bugherder | ||
Comment 7•4 years ago
|
||
The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 8•4 years ago
|
||
This will need an uplift. But first, would like the reporter to confirm fix and check that workflow after alert (use or install Firefox) works as expected as well.
| Reporter | ||
Comment 9•4 years ago
|
||
Verified that voiceover is reading the messages in the prompt and the buttons as well when selected with tab on Firefox 94.0a1 (2021-09-13)
| Assignee | ||
Comment 10•4 years ago
|
||
Comment on attachment 9240654 [details]
Bug 1729879 - Start NSApp in AskUserIfWeShouldInstall alert. r?jwatt!
Beta/Release Uplift Approval Request
- User impact if declined: VoiceOver users will not know of the dialog and nothing will be spoken to them when Firefox is first launched.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: 1. Launch Firefox from dmg when no previous version was installed.
- Assure alert is read and interactive with VoiceOver.
- Press "Don't Install"
- Assure Firefox launches and works with VoiceOver
- List of other uplifts needed: None
- Risk to taking this patch: Medium
- Why is the change risky/not risky? (and alternatives if risky): This relies on some AppKit quirks I don't fully understand, so I am marking the risk as "medium".
- String changes made/needed:
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 11•4 years ago
|
||
Comment on attachment 9240654 [details]
Bug 1729879 - Start NSApp in AskUserIfWeShouldInstall alert. r?jwatt!
This is medium risk but was verifed on nightly and baked 5 days on nightly with no new regression reported, let's take it in 93 beta 6, thanks.
Comment 12•4 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 13•4 years ago
|
||
This has been fixed on 93.0b6 as well. Thank you!
Updated•3 years ago
|
Description
•