Bug 1729879 - Start NSApp in AskUserIfWeShouldInstall alert. r=mstange a=pascalc

This is needed for platform accessibility support.

Differential Revision: https://phabricator.services.mozilla.com/D125280